some little additions here and there